set secretName to null on backup job

--- a/charts/backup/values.yaml
+++ b/charts/backup/values.yaml
@@ -10,7 +10,7 @@ database: neo4j,system
 # cloudProvider can be either gcp, aws, or azure
 cloudProvider: gcp
 # set secretName to NULL if using workload-identity in gcp
-secretName: "neo4j-gcp-credentials"
+secretName: null
 pageCache: 2G
 heapSize: 2G
 fallbackToFull: "true"
