allow to set removeExistingFiles on backup job

--- a/charts/backup/templates/backup.yaml
+++ b/charts/backup/templates/backup.yaml
@@ -62,6 +62,8 @@ spec:
                   value: "{{ .Values.checkLabelScanStore }}"
                 - name: CHECK_PROPERTY_OWNERS
                   value: "{{ .Values.checkPropertyOwners }}"
+                - name: REMOVE_EXISTING_FILES
+                  value: "{{ .Values.removeExistingFiles }}"
               volumeMounts:
                 {{- if .Values.secretName }}
                 - name: credentials
