allow multiple instance of the chart as subchart

--- a/charts/backup/templates/backup.yaml
+++ b/charts/backup/templates/backup.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: "{{ .Release.Name }}-job"
+  name: "{{ .Release.Name }}-{{ .Chart.Name }}-job"
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
     app.kubernetes.io/instance: {{ .Release.Name | quote }}
